# predictive-analytics-2025

./: README.md  intro.ipynb  kupiec.ipynb  lab1-solved.ipynb  lab1.ipynb  lab2-solved.ipynb  lab2.ipynb  lab3.ipynb  lab5.ipynb  lab6.ipynb  neural-net.ipynb  pyproject.toml
data/: consumption.csv  dji.csv  exports.txt  gefcom.txt
tests/: task1.csv  task2.csv  task3.csv  test1B.ipynb
tests/first-test/: task2.csv  test1A.ipynb  test1C.ipynb
tests/retakes/: test1D.ipynb  test1E.ipynb  test2D.ipynb  test2E.ipynb
tests/second-test/: large_regression.csv  prices.csv  test2A.ipynb  test2B.ipynb  test2C.ipynb
