[project]
name = "predictive-analytics-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "polars>=1.34.0",
    "scipy>=1.16.2",
    "statsmodels>=0.14.5",
]
